Fix missing translations (fix #535)

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -1085,7 +1085,7 @@
   </action>
   <action name="actionRenameExistingImages">
    <property name="text">
-    <string>Rename existing images</string>
+    <string>Renommer des images existantes</string>
    </property>
   </action>
  </widget>
