--- a/src/sources/sourcessettingswindow.ui
+++ b/src/sources/sourcessettingswindow.ui
@@ -14,7 +14,7 @@
    <string>Options de site</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../resources.qrc">
+   <iconset resource="../../resources.qrc">
     <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -781,8 +781,8 @@
   <tabstop>buttonAccept</tabstop>
  </tabstops>
  <resources>
-  <include location="../resources.qrc"/>
-  <include location="../resources.qrc"/>
+  <include location="../../resources.qrc"/>
+  <include location="../../resources.qrc"/>
  </resources>
  <connections>
   <connection>
