--- a/src/settings/optionswindow.ui
+++ b/src/settings/optionswindow.ui
@@ -18,6 +18,16 @@
     <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <item row="1" column="0">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0">
      <property name="spacing">
@@ -2148,40 +2158,40 @@ p, li { white-space: pre-wrap; }
          <property name="fieldGrowthPolicy">
           <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
          </property>
-         <item row="0" column="0">
+         <item row="2" column="0">
           <widget class="QLabel" name="label_3">
            <property name="text">
             <string>Image</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="1">
+         <item row="2" column="1">
           <widget class="QLineEdit" name="lineCommandsImage"/>
          </item>
-         <item row="1" column="0" colspan="2">
-          <widget class="QLabel" name="label_36">
-           <property name="text">
-            <string>Symboles disponibles : les mêmes que dans la partie sauvegarde.</string>
-           </property>
-           <property name="wordWrap">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="0">
+         <item row="3" column="0">
           <widget class="QLabel" name="label_47">
            <property name="text">
-            <string>Tag</string>
+            <string>Tag (après)</string>
            </property>
           </widget>
          </item>
-         <item row="2" column="1">
-          <widget class="QLineEdit" name="lineCommandsTag"/>
+         <item row="3" column="1">
+          <widget class="QLineEdit" name="lineCommandsTagAfter"/>
          </item>
-         <item row="3" column="0" colspan="2">
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_36">
+           <property name="text">
+            <string>Tag (avant)</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QLineEdit" name="lineCommandsTagBefore"/>
+         </item>
+         <item row="1" column="0" colspan="2">
           <widget class="QLabel" name="label_27">
            <property name="text">
-            <string>Symboles disponibles : &lt;i&gt;%tag%&lt;/i&gt;, &lt;i&gt;%type%&lt;/i&gt;, &lt;i&gt;%number%&lt;/i&gt;.&lt;br/&gt;&lt;i&gt;%tag%&lt;/i&gt; : le tag&lt;br/&gt;&lt;i&gt;%type%&lt;/i&gt; : type du tag, &quot;general&quot;, &quot;artist&quot;, &quot;copyright&quot;, &quot;character&quot;, &quot;model&quot; ou &quot;photo_set&quot;&lt;br/&gt;&lt;i&gt;%number%&lt;/i&gt; : le numéro du type de tag (varie entre 0 et 6)</string>
+            <string>Symboles additionels : &lt;span style=&quot; font-style:italic;&quot;&gt;%tag%&lt;/span&gt;, &lt;span style=&quot; font-style:italic;&quot;&gt;%type%&lt;/span&gt;, &lt;span style=&quot; font-style:italic;&quot;&gt;%number%&lt;/span&gt;.&lt;br/&gt;&lt;span style=&quot; font-style:italic;&quot;&gt;%tag%&lt;/span&gt; : le tag&lt;br/&gt;&lt;span style=&quot; font-style:italic;&quot;&gt;%type%&lt;/span&gt; : type du tag, &amp;quot;general&amp;quot;, &amp;quot;artist&amp;quot;, &amp;quot;copyright&amp;quot;, &amp;quot;character&amp;quot;, &amp;quot;model&amp;quot; ou &amp;quot;photo_set&amp;quot;&lt;br/&gt;&lt;span style=&quot; font-style:italic;&quot;&gt;%number%&lt;/span&gt; : le numéro du type de tag (varie entre 0 et 6)</string>
            </property>
            <property name="wordWrap">
             <bool>true</bool>
@@ -2209,41 +2219,34 @@ p, li { white-space: pre-wrap; }
              <widget class="QLineEdit" name="lineCommandsSqlBefore"/>
             </item>
             <item row="1" column="0">
+             <widget class="QLabel" name="label_79">
+              <property name="text">
+               <string>Tag (avant)</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QLineEdit" name="lineCommandsSqlTagBefore"/>
+            </item>
+            <item row="3" column="0">
              <widget class="QLabel" name="label_75">
               <property name="text">
                <string>Image</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="1">
+            <item row="3" column="1">
              <widget class="QLineEdit" name="lineCommandsSqlImage"/>
             </item>
-            <item row="2" column="0" colspan="2">
-             <widget class="QLabel" name="label_79">
-              <property name="text">
-               <string>Symboles disponibles : les mêmes que dans la partie sauvegarde.</string>
-              </property>
-              <property name="wordWrap">
-               <bool>true</bool>
-              </property>
-             </widget>
-            </item>
-            <item row="3" column="0">
+            <item row="4" column="0">
              <widget class="QLabel" name="label_76">
               <property name="text">
-               <string>Tag</string>
+               <string>Tag (après)</string>
               </property>
              </widget>
             </item>
-            <item row="4" column="0" colspan="2">
-             <widget class="QLabel" name="label_28">
-              <property name="text">
-               <string>Symboles disponibles : &lt;i&gt;%tag%&lt;/i&gt;, &lt;i&gt;%type%&lt;/i&gt;, &lt;i&gt;%number%&lt;/i&gt;.&lt;br/&gt;&lt;i&gt;%tag%&lt;/i&gt; : le tag&lt;br/&gt;&lt;i&gt;%type%&lt;/i&gt; : type du tag, &quot;general&quot;, &quot;artist&quot;, &quot;copyright&quot;, &quot;character&quot;, &quot;model&quot; ou &quot;photo_set&quot;&lt;br/&gt;&lt;i&gt;%number%&lt;/i&gt; : le numéro du type de tag (varie entre 0 et 6)</string>
-              </property>
-              <property name="wordWrap">
-               <bool>true</bool>
-              </property>
-             </widget>
+            <item row="4" column="1">
+             <widget class="QLineEdit" name="lineCommandsSqlTagAfter"/>
             </item>
             <item row="5" column="0">
              <widget class="QLabel" name="label_78">
@@ -2255,8 +2258,15 @@ p, li { white-space: pre-wrap; }
             <item row="5" column="1">
              <widget class="QLineEdit" name="lineCommandsSqlAfter"/>
             </item>
-            <item row="3" column="1">
-             <widget class="QLineEdit" name="lineCommandsSqlTag"/>
+            <item row="2" column="0" colspan="2">
+             <widget class="QLabel" name="label_28">
+              <property name="text">
+               <string>Symboles additionels : &lt;span style=&quot; font-style:italic;&quot;&gt;%tag%&lt;/span&gt;, &lt;span style=&quot; font-style:italic;&quot;&gt;%type%&lt;/span&gt;, &lt;span style=&quot; font-style:italic;&quot;&gt;%number%&lt;/span&gt;.&lt;br/&gt;&lt;span style=&quot; font-style:italic;&quot;&gt;%tag%&lt;/span&gt; : le tag&lt;br/&gt;&lt;span style=&quot; font-style:italic;&quot;&gt;%type%&lt;/span&gt; : type du tag, &amp;quot;general&amp;quot;, &amp;quot;artist&amp;quot;, &amp;quot;copyright&amp;quot;, &amp;quot;character&amp;quot;, &amp;quot;model&amp;quot; ou &amp;quot;photo_set&amp;quot;&lt;br/&gt;&lt;span style=&quot; font-style:italic;&quot;&gt;%number%&lt;/span&gt; : le numéro du type de tag (varie entre 0 et 6)</string>
+              </property>
+              <property name="wordWrap">
+               <bool>true</bool>
+              </property>
+             </widget>
             </item>
            </layout>
           </widget>
@@ -2325,16 +2335,6 @@ p, li { white-space: pre-wrap; }
       </widget>
      </item>
     </layout>
-   </item>
-   <item row="1" column="0">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-     </property>
-    </widget>
    </item>
   </layout>
  </widget>
@@ -2419,7 +2419,7 @@ p, li { white-space: pre-wrap; }
   <tabstop>spinBorders</tabstop>
   <tabstop>checkProxyUse</tabstop>
   <tabstop>lineCommandsImage</tabstop>
-  <tabstop>lineCommandsTag</tabstop>
+  <tabstop>lineCommandsTagAfter</tabstop>
   <tabstop>buttonCustom</tabstop>
   <tabstop>spinHideFavorites</tabstop>
   <tabstop>checkResizeInsteadOfCropping</tabstop>
