--- a/src/settings/optionswindow.ui
+++ b/src/settings/optionswindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>666</width>
-    <height>453</height>
+    <height>468</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -597,10 +597,30 @@
            </property>
           </widget>
          </item>
+         <item row="1" column="0" colspan="2">
+          <widget class="QCheckBox" name="checkSampleFallback">
+           <property name="text">
+            <string>Télécharger le sample en cas d'erreur</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
          <item row="2" column="0" colspan="2">
           <widget class="QCheckBox" name="checkAutodownload">
            <property name="text">
             <string>Télécharger les images automatiquement</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="0" colspan="2">
+          <widget class="QCheckBox" name="checkKeepDate">
+           <property name="text">
+            <string>Conserver la date de création</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -667,21 +687,21 @@
            </property>
           </widget>
          </item>
-         <item row="8" column="0">
+         <item row="9" column="0">
           <widget class="QLabel" name="label_54">
            <property name="text">
             <string>Longeur limite</string>
            </property>
           </widget>
          </item>
-         <item row="8" column="1">
+         <item row="9" column="1">
           <widget class="QSpinBox" name="spinLimit">
            <property name="maximum">
             <number>260</number>
            </property>
           </widget>
          </item>
-         <item row="9" column="0" colspan="2">
+         <item row="10" column="0" colspan="2">
           <widget class="QLabel" name="label_55">
            <property name="text">
             <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
@@ -695,14 +715,14 @@ p, li { white-space: pre-wrap; }
            </property>
           </widget>
          </item>
-         <item row="10" column="0">
+         <item row="11" column="0">
           <widget class="QLabel" name="label_29">
            <property name="text">
             <string>Téléchargements simultanés</string>
            </property>
           </widget>
          </item>
-         <item row="10" column="1">
+         <item row="11" column="1">
           <widget class="QSpinBox" name="spinSimultaneous">
            <property name="minimum">
             <number>1</number>
@@ -712,14 +732,14 @@ p, li { white-space: pre-wrap; }
            </property>
           </widget>
          </item>
-         <item row="11" column="0">
+         <item row="12" column="0">
           <widget class="QLabel" name="label_83">
            <property name="text">
             <string>À la fin du téléchargement</string>
            </property>
           </widget>
          </item>
-         <item row="11" column="1">
+         <item row="12" column="1">
           <widget class="QComboBox" name="comboBatchEnd">
            <item>
             <property name="text">
@@ -748,14 +768,14 @@ p, li { white-space: pre-wrap; }
            </item>
           </widget>
          </item>
-         <item row="12" column="0">
+         <item row="13" column="0">
           <widget class="QLabel" name="label_19">
            <property name="text">
             <string>Si un fichier existe déjà</string>
            </property>
           </widget>
          </item>
-         <item row="12" column="1">
+         <item row="13" column="1">
           <widget class="QComboBox" name="comboMd5Duplicates">
            <property name="currentIndex">
             <number>0</number>
@@ -782,41 +802,31 @@ p, li { white-space: pre-wrap; }
            </item>
           </widget>
          </item>
-         <item row="13" column="0" colspan="2">
+         <item row="14" column="0" colspan="2">
           <widget class="QLabel" name="label_21">
            <property name="text">
             <string>&lt;i&gt;L'identicité des fichiers est basée sur l'algorithme MD5.&lt;/i&gt;</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="0" colspan="2">
-          <widget class="QCheckBox" name="checkSampleFallback">
-           <property name="text">
-            <string>Télécharger le sample en cas d'erreur</string>
-           </property>
-           <property name="checked">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
-         <item row="14" column="0">
+         <item row="15" column="0">
           <widget class="QLabel" name="label_84">
            <property name="text">
             <string>Retéléchargement automatique</string>
            </property>
           </widget>
          </item>
-         <item row="14" column="1">
+         <item row="15" column="1">
           <widget class="QSpinBox" name="spinAutomaticRetries">
            <property name="maximum">
             <number>100</number>
            </property>
           </widget>
          </item>
-         <item row="3" column="0" colspan="2">
-          <widget class="QCheckBox" name="checkKeepDate">
+         <item row="8" column="0" colspan="2">
+          <widget class="QCheckBox" name="checkNoJpeg">
            <property name="text">
-            <string>Conserver la date de création</string>
+            <string>Remplacer les JPEG par des JPG</string>
            </property>
            <property name="checked">
             <bool>true</bool>
