--- a/src/settings/startwindow.ui
+++ b/src/settings/startwindow.ui
@@ -119,6 +119,9 @@
      <property name="wordWrap">
       <bool>true</bool>
      </property>
+     <property name="openExternalLinks">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
    <item>
