Fix zoom details window title

--- a/src/viewer/detailswindow.ui
+++ b/src/viewer/detailswindow.ui
@@ -20,10 +20,10 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>Grabber - Détails</string>
+   <string>Détails</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../resources.qrc">
+   <iconset resource="../../resources.qrc">
     <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -490,7 +490,9 @@ p, li { white-space: pre-wrap; }
   </layout>
  </widget>
  <resources>
-  <include location="../resources.qrc"/>
+  <include location="../../resources.qrc"/>
+  <include location="../../resources.qrc"/>
+  <include location="../../resources.qrc"/>
  </resources>
  <connections>
   <connection>
