--- a/src/viewer/detailswindow.ui
+++ b/src/viewer/detailswindow.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>247</width>
     <height>431</height>
    </rect>
   </property>
@@ -20,7 +20,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>Détails</string>
+   <string>Grabber - Détails</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../../resources.qrc">
@@ -41,6 +41,12 @@
      </item>
      <item row="0" column="1">
       <widget class="QLabel" name="labelTags">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="contextMenuPolicy">
         <enum>Qt::CustomContextMenu</enum>
        </property>
