--- a/src/batch/adduniquewindow.ui
+++ b/src/batch/adduniquewindow.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>296</width>
-    <height>220</height>
+    <width>300</width>
+    <height>209</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Grabber - Ajouter une image</string>
+   <string>Ajouter une image</string>
   </property>
   <layout class="QFormLayout" name="formLayout">
    <property name="fieldGrowthPolicy">
@@ -68,19 +68,6 @@
    <item row="2" column="1">
     <widget class="QLineEdit" name="lineMd5"/>
    </item>
-   <item row="7" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
    <item row="4" column="0">
     <widget class="QLabel" name="label_4">
      <property name="text">
@@ -118,6 +105,19 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item row="7" column="0" colspan="2">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>400</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
