--- a/src/aboutwindow.ui
+++ b/src/aboutwindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>aboutWindow</class>
- <widget class="QWidget" name="aboutWindow">
+ <class>AboutWindow</class>
+ <widget class="QWidget" name="AboutWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
