--- a/src/settings/customwindow.ui
+++ b/src/settings/customwindow.ui
@@ -14,24 +14,24 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Ajouter un symbole personnalisé</string>
+   <string>Add a custom token</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../resources.qrc">
+   <iconset resource="../../resources.qrc">
     <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
   <layout class="QFormLayout" name="formLayout">
    <item row="0" column="0" colspan="2">
     <widget class="QLabel" name="label_3">
      <property name="text">
-      <string>&lt;i&gt;Séparer les tags par des espaces ou des sauts de ligne&lt;/i&gt;</string>
+      <string>&lt;i&gt;Separate tags by spaces or line breaks&lt;/i&gt;</string>
      </property>
     </widget>
    </item>
    <item row="1" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Nom</string>
+      <string>Name</string>
      </property>
     </widget>
    </item>
@@ -66,7 +66,9 @@
   <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources>
-  <include location="../resources.qrc"/>
+  <include location="../../resources.qrc"/>
+  <include location="../../resources.qrc"/>
+  <include location="../../resources.qrc"/>
  </resources>
  <connections>
   <connection>
