Rename customWindow in CustomWindow

--- a/src/settings/customwindow.ui
+++ b/src/settings/customwindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>customWindow</class>
- <widget class="QDialog" name="customWindow">
+ <class>CustomWindow</class>
+ <widget class="QDialog" name="CustomWindow">
   <property name="windowModality">
    <enum>Qt::WindowModal</enum>
   </property>
@@ -74,7 +74,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>customWindow</receiver>
+   <receiver>CustomWindow</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -90,7 +90,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>customWindow</receiver>
+   <receiver>CustomWindow</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
