--- a/src/sources/sitewindow.ui
+++ b/src/sources/sitewindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>siteWindow</class>
- <widget class="QDialog" name="siteWindow">
+ <class>SiteWindow</class>
+ <widget class="QDialog" name="SiteWindow">
   <property name="windowModality">
    <enum>Qt::WindowModal</enum>
   </property>
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>269</width>
+    <width>290</width>
     <height>99</height>
    </rect>
   </property>
@@ -17,7 +17,7 @@
    <string>Grabber - Ajouter un site</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../resources.qrc">
+   <iconset resource="../../resources.qrc">
     <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -95,13 +95,15 @@
   <tabstop>lineEdit</tabstop>
  </tabstops>
  <resources>
-  <include location="../resources.qrc"/>
+  <include location="../../resources.qrc"/>
+  <include location="../../resources.qrc"/>
+  <include location="../../resources.qrc"/>
  </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>siteWindow</receiver>
+   <receiver>SiteWindow</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -117,7 +119,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>siteWindow</receiver>
+   <receiver>SiteWindow</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
