--- a/src/sources/sitewindow.ui
+++ b/src/sources/sitewindow.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Grabber - Ajouter un site</string>
+   <string>Add a site</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../../resources.qrc">
@@ -27,7 +27,7 @@
       <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
      </property>
      <item row="0" column="0">
-      <widget class="QLabel" name="label">
+      <widget class="QLabel" name="labelType">
        <property name="text">
         <string>Type</string>
        </property>
@@ -41,14 +41,14 @@
        <item>
         <widget class="QCheckBox" name="checkBox">
          <property name="text">
-          <string>Deviner</string>
+          <string>Guess</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item row="1" column="0">
-      <widget class="QLabel" name="label_2">
+      <widget class="QLabel" name="labelUrl">
        <property name="text">
         <string>Url</string>
        </property>
