--- a/src/utils/rename-existing/rename-existing-1.ui
+++ b/src/utils/rename-existing/rename-existing-1.ui
@@ -11,17 +11,17 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Renommer les images existantes</string>
+   <string>Rename existing images</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../../resources.qrc">
+   <iconset resource="../../../resources.qrc">
     <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
   <layout class="QFormLayout" name="formLayout">
    <item row="0" column="0">
     <widget class="QLabel" name="labelFolder">
      <property name="text">
-      <string>Dossier</string>
+      <string>Folder</string>
      </property>
     </widget>
    </item>
@@ -31,14 +31,14 @@
    <item row="1" column="0" colspan="2">
     <widget class="QRadioButton" name="radioForce">
      <property name="text">
-      <string>Forcer le calcul du md5</string>
+      <string>Force md5 calculation</string>
      </property>
     </widget>
    </item>
    <item row="2" column="0" colspan="2">
     <widget class="QRadioButton" name="radioFilename">
      <property name="text">
-      <string>Récupérer le md5 dans le nom du fichier</string>
+      <string>Get md5 in filename</string>
      </property>
      <property name="checked">
       <bool>true</bool>
@@ -48,7 +48,7 @@
    <item row="3" column="0">
     <widget class="QLabel" name="labelFilenameOrigin">
      <property name="text">
-      <string>Format d'origine</string>
+      <string>Origin filename</string>
      </property>
     </widget>
    </item>
@@ -58,7 +58,7 @@
    <item row="4" column="0">
     <widget class="QLabel" name="labelFilenameDestination">
      <property name="text">
-      <string>Format de destination</string>
+      <string>Destintation filename</string>
      </property>
     </widget>
    </item>
@@ -103,14 +103,14 @@
      <item>
       <widget class="QPushButton" name="buttonContinue">
        <property name="text">
-        <string>Continuer</string>
+        <string>Continue</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="buttonCancel">
        <property name="text">
-        <string>Annuler</string>
+        <string>Cancel</string>
        </property>
       </widget>
      </item>
@@ -119,8 +119,9 @@
   </layout>
  </widget>
  <resources>
-  <include location="../../resources.qrc"/>
-  <include location="../../resources.qrc"/>
+  <include location="../../../resources.qrc"/>
+  <include location="../../../resources.qrc"/>
+  <include location="../../../resources.qrc"/>
  </resources>
  <connections/>
 </ui>
