--- a/src/utils/blacklist-fix/blacklist-fix-2.ui
+++ b/src/utils/blacklist-fix/blacklist-fix-2.ui
@@ -11,17 +11,17 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Réparateur de liste noire</string>
+   <string>Blacklist fixer</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../resources.qrc">
+   <iconset resource="../../../resources.qrc">
     <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Choisissez les images à supprimer dans la liste ci-dessous.</string>
+      <string>Choose images to delete in the list below.</string>
      </property>
     </widget>
    </item>
@@ -49,12 +49,12 @@
      </column>
      <column>
       <property name="text">
-       <string>Miniature</string>
+       <string>Thumbnail</string>
       </property>
      </column>
      <column>
       <property name="text">
-       <string>Nom</string>
+       <string>Name</string>
       </property>
      </column>
      <column>
@@ -69,7 +69,7 @@
      <item>
       <widget class="QPushButton" name="buttonSelectBlacklisted">
        <property name="text">
-        <string>Sélectionner les images trouvées</string>
+        <string>Select found images</string>
        </property>
       </widget>
      </item>
@@ -96,7 +96,7 @@
      <item>
       <widget class="QPushButton" name="buttonCancel">
        <property name="text">
-        <string>Annuler</string>
+        <string>Cancel</string>
        </property>
       </widget>
      </item>
@@ -105,7 +105,9 @@
   </layout>
  </widget>
  <resources>
-  <include location="../resources.qrc"/>
+  <include location="../../../resources.qrc"/>
+  <include location="../../../resources.qrc"/>
+  <include location="../../../resources.qrc"/>
  </resources>
  <connections/>
 </ui>
