--- a/src/batch/adduniquewindow.ui
+++ b/src/batch/adduniquewindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Ajouter une image</string>
+   <string>Add an image</string>
   </property>
   <layout class="QFormLayout" name="formLayout">
    <property name="fieldGrowthPolicy">
@@ -22,7 +22,7 @@
      <item>
       <widget class="QPushButton" name="pushButton">
        <property name="text">
-        <string>Ajouter</string>
+        <string>Add</string>
        </property>
       </widget>
      </item>
@@ -71,7 +71,7 @@
    <item row="4" column="0">
     <widget class="QLabel" name="label_4">
      <property name="text">
-      <string>Nom de fichier</string>
+      <string>Filename</string>
      </property>
     </widget>
    </item>
@@ -88,7 +88,7 @@
    <item row="3" column="0">
     <widget class="QLabel" name="label_5">
      <property name="text">
-      <string>Dossier</string>
+      <string>Folder</string>
      </property>
     </widget>
    </item>
@@ -100,7 +100,7 @@
      <item>
       <widget class="QPushButton" name="buttonFolder">
        <property name="text">
-        <string>Parcourir</string>
+        <string>Browse</string>
        </property>
       </widget>
      </item>
